objects/Document__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this Document belongs to an Account id of that Account will be stores here.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field should contain the Document Template due to which the Document is generated automatically.</description>
        <label>Document Template</label>
        <referenceTo>Document_Template__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extensions_Allowed__c</fullName>
        <description>Extensions allowed in comma separated format. If none specified all extensions will be allowed.</description>
        <label>Extensions Allowed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is true that means this document is finalized and can not be changed. Only administrator can uncheck this field if required.</description>
        <label>Is Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Version__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Latest Version of the Document present. When document is empty this is 0, and at every upload of the version, this is incremented by 1.</description>
        <label>Latest Version</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity to which this Document belongs (if any)</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup of the Document which Parent to the current Document.

This will generally be used to relate a Document to Parent in case of a Document belongs to Multiple Dcouments</description>
        <label>Parent</label>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of the Document if it is a Versioned, Multiple Versioned, Multiple Files.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Versioned</fullName>
                </value>
                <value>
                    <fullName>Multiple Versioned</fullName>
                </value>
                <value>
                    <fullName>Multiple Files</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Documents</fullName>
        <columns>NAME</columns>
        <columns>Extensions_Allowed__c</columns>
        <columns>Is_Finalized__c</columns>
        <columns>Document_Template__c</columns>
        <columns>Latest_Version__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Documents</label>
    </listViews>
</CustomObject>